--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "axios": "^1.13.0",
     "cors": "^2.8.5",
     "docxtemplater": "^3.67.1",
     "dotenv": "^17.2.3",
@@ -18,5 +19,10 @@
     "mysql2": "^3.15.3",
     "pizzip": "^3.2.0",
     "sequelize": "^6.37.7"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.16"
   }
 }
