--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "docxtemplater": "^3.67.1",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "lucide-react": "^0.548.0",
     "mysql2": "^3.15.3",
     "pizzip": "^3.2.0",
+    "react-hook-form": "^7.65.0",
     "sequelize": "^6.37.7"
   },
   "devDependencies": {
