--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
   "type": "commonjs",
   "dependencies": {
     "axios": "^1.13.0",
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "docxtemplater": "^3.67.1",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.548.0",
     "mysql2": "^3.15.3",
     "pizzip": "^3.2.0",
